# sentinel2_downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sentinel2_downloader/: __init__.py  downloader.py  utils.py
src/sentinel2_downloader/utils/: __init__.py  api.py  exceptions.py  geometry.py  metadata.py  superres.py
